kubernetes/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: modmaster-pro-prod
  labels:
    name: modmaster-pro-prod
    environment: production
